--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,109 @@
-streamlit==0.57.3
-pandas==0.24.2
-python-barcode==0.11.0  
-reportlab==3.5.46 
-xlrd==1.2.0
+altair==4.1.0
+altgraph==0.17
+appnope==0.1.0
+argcomplete==1.10.0
+astor==0.8.1
+attrs==19.3.0
+backcall==0.1.0
+base58==2.0.0
+beautifulsoup4==4.8.0
+bleach==3.1.5
+blinker==1.4
+boto3==1.13.19
+botocore==1.16.19
+cachetools==4.1.0
+certifi==2020.4.5.1
+chardet==3.0.4
+click==7.1.2
+decorator==4.4.2
+defusedxml==0.6.0
+docutils==0.15.2
+docx2txt==0.8
+EbookLib==0.17.1
+entrypoints==0.3
+enum-compat==0.0.3
+et-xmlfile==1.0.1
+extract-msg==0.23.1
+fpdf==1.7.2
+gitdb==4.0.5
+GitPython==3.1.11
+idna==2.9
+IMAPClient==2.1.0
+importlib-metadata==1.6.0
+ipykernel==5.3.0
+ipython==7.14.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+jdcal==1.4.1
+jedi==0.17.0
+Jinja2==2.11.2
+jmespath==0.10.0
+jsonschema==3.2.0
+jupyter-client==6.1.3
+jupyter-core==4.6.3
+lxml==4.5.2
+macholib==1.14
+MarkupSafe==1.1.1
+mistune==0.8.4
+nbconvert==5.6.1
+nbformat==5.0.6
+notebook==6.0.3
+numpy==1.18.4
+olefile==0.46
+openpyxl==3.0.4
+packaging==20.4
+pandas==1.0.3
+pandocfilters==1.4.2
+parso==0.7.0
+pathtools==0.1.2
+pdfminer.six==20200517
+pdfplumber==0.5.23
 pdftotext==2.1.4
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==7.1.2
+prometheus-client==0.8.0
+prompt-toolkit==3.0.5
+protobuf==3.12.2
+ptyprocess==0.6.0
+pyarrow==2.0.0
+pycryptodome==3.9.8
+pydeck==0.3.1
+Pygments==2.6.1
+pyinstaller==4.0
+pyinstaller-hooks-contrib==2020.9
+pyparsing==2.4.7
+pyrsistent==0.16.0
+python-barcode==0.11.0
+python-dateutil==2.8.1
+python-pptx==0.6.18
+pytz==2020.1
+pyzmq==19.0.1
+reportlab==3.5.46
+requests==2.23.0
+s3transfer==0.3.3
+Send2Trash==1.5.0
+six==1.12.0
+smmap==3.0.4
+sortedcontainers==2.2.2
+soupsieve==2.0.1
+SpeechRecognition==3.8.1
+streamlit==0.71.0
+terminado==0.8.3
+testpath==0.4.4
+textract==1.6.3
+toml==0.10.1
+toolz==0.10.0
+tornado==5.1.1
+traitlets==4.3.3
+tzlocal==1.5.1
+urllib3==1.25.9
+validators==0.15.0
+Wand==0.6.3
+watchdog==0.10.2
+wcwidth==0.1.9
+webencodings==0.5.1
+widgetsnbextension==3.5.1
+xlrd==1.2.0
+XlsxWriter==1.3.6
+zipp==3.1.0
